RbA Build/src/objects/TM_Offset__c.object
<CustomObject>
    <description>This object will record tech measure offsets for work in progress tech measurements.  The data in these records will only be used by the rSuite Tech Mapp application.  The related lists should not be visible to the normal end users.  These records are also master detail to the order line item. There will also be a Tech Measure Offset Configuration object that will be used to hold commonly used offsets.  These will not be linked but will be used by rSuite to copy values into these records.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>a description of the offset</description>
        <inlineHelpText>Please enter a description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension__c</fullName>
        <description>The type of the offset measurement - width or height</description>
        <inlineHelpText>The type of the offset measurement - width or height</inlineHelpText>
        <label>Dimension</label>
        <picklist>
            <picklistValues>
                <fullName>Height</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Width</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>indicates whether an offset is measured on the interior or exterior</description>
        <inlineHelpText>Set the measurement offset location</inlineHelpText>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Exterior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Horizontal Mullion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical Mullion</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Measurement__c</fullName>
        <description>The offset measurement</description>
        <inlineHelpText>Enter an offset measurement</inlineHelpText>
        <label>Measurement</label>
        <precision>5</precision>
        <required>true</required>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The window or door line item that is the parent of this Tech Measure Offset</description>
        <inlineHelpText>The window or door line item that is the parent of this Tech Measure Offset</inlineHelpText>
        <label>Order Line</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Tech Measure Offsets</relationshipLabel>
        <relationshipName>Tech_Measure_Offsets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of the offset measurement - width or height</description>
        <inlineHelpText>The type of the offset measurement - width or height</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Height</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Width</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rSuite_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>an identifier used by rSuite to help them manage jobs in the mobile apps - meets RFC 4122 version 4</description>
        <externalId>true</externalId>
        <inlineHelpText>an identifier used by rSuite to help them manage jobs in the mobile apps</inlineHelpText>
        <label>rSuite Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Tech Measure Offset</label>
    <nameField>
        <displayFormat>TMO-{0000000}</displayFormat>
        <label>TM Offset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tech Measure Offsets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>